# muscle-growth

./: .gitignore  Dockerfile  LICENSE  README.md  _config.yml  _toc.yml  environment.yml  pyproject.toml
.github/workflows/: build_docs.yml  deploy_docs.yml  docker-image.yml
config_files/: exercise.yml  exercise_eq.yml  exercise_eq_reduced_k1.yml  material_rohrle.yml
data/: damas.csv  defreitas.csv  seynnes.csv
data/VHF_surfaces/: README.txt
demos/: demo_coupled_model.py  demo_muscle_contraction.py  demo_signaling_model.py
meshes/VHF_Left_Muscle_BicepsFemorisLong_smooth/: VHF_Left_Muscle_BicepsFemorisLong_smooth.h5  VHF_Left_Muscle_BicepsFemorisLong_smooth.xdmf
meshes/VHF_Left_Muscle_Semitendinosus_smooth/: VHF_Left_Muscle_Semitendinosus_smooth.h5  VHF_Left_Muscle_Semitendinosus_smooth.xdmf
meshes/muscle-cylinder/: muscle-cylinder.geo  muscle-cylinder.msh
scripts/: Snakefile_heterogeneity.smk  Snakefile_idealized.smk  Snakefile_realistic.smk  Snakefile_signaling.smk  anatomy_view.py  figure3.smk  figure4.smk  figure5.smk  figure6.smk  generate_figure3.py  mesh_statistics.py  plot_3d_growth_comparison.py  plot_3d_heterogeneous.py  plot_SA_result.py  plot_fiber_arrangements.py  plot_growth_comparison.py  plot_mesh_statistics.py  plot_param_distribution.py  plot_protocols.py  plot_quantity_comparison.py  plot_spatial_ode_states.py  plot_variation_comparison.py  run_contraction.py  run_coupled_growth.py  run_kM_parameter_fit.py  run_myofibril_comparison.py  run_three_protocols_baselineODE.py  sensitivity_analysis.py  sensitivity_analysis.slurm
(+241 files in other folders)
